--- a/gof.css
+++ b/gof.css
@@ -25,6 +25,12 @@
     top: 520px;
     height: 500px;
 }
+
+.saves canvas {
+    position: static;
+    margin: 10px;
+}
+
 #grid-canvas {
     z-index: 2;
 }
