Add styling for RLE text area and buttons.

--- a/gof.css
+++ b/gof.css
@@ -22,7 +22,7 @@
 
 .saves {
     position: relative;
-    top: 520px;
+    top: 650px;
     height: 500px;
 }
 
@@ -37,4 +37,23 @@
 
 #gof-canvas {
     z-index: 1;
+}
+.patterns {
+    position: relative;
+}
+.buttons {
+    display: inline;
+    position: absolute;
+}
+.rle-button { 
+    position: relative;
+    display: block;
+    size: auto;
+}
+#rle_submit_butn {
+	z-index: 3;
+}
+
+#rle-textarea {
+	z-index:3;
 }
